# uniAdvisor

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/: DEPLOYMENT.md  README.md  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260627_001_phase1_data_model.py  20260628_002_document_chunk_content_hash_unique.py
backend/app/: __init__.py  main.py
backend/app/api/: documents.py  rag.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py  session.py  types.py
backend/app/schemas/: documents.py  rag.py
backend/app/services/: chunking.py  document_storage.py  embeddings.py  llm.py  rag_answer.py  rag_search.py  text_extraction.py
frontend/: .env.example  DEPLOYMENT.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/student/: page.tsx
frontend/components/documents/: DocumentStatusHelp.tsx  DocumentUploadForm.tsx  DocumentWorkflowCard.tsx
frontend/components/layout/: AppHeader.tsx  AppShell.tsx  DashboardTabs.tsx  WorkflowStrip.tsx  WorkspaceGuide.tsx
frontend/components/rag/: AnswerCard.tsx  RagAskPanel.tsx  RagSearchPanel.tsx  SearchResultCard.tsx  (+1 more)
frontend/lib/: api.ts  types.ts
tests/: route_helpers.py  test_chunking_embedding.py  test_config.py  test_document_processing.py  test_document_upload_extraction.py  test_embedding_providers.py  test_grounded_answer_generation.py  test_health.py  test_llm_provider.py  test_phase1_data_model.py  test_phase1_workflow.py  test_rag_search.py  test_storage_provider.py
(+22 files in other folders)
