[project]
name = "uniAdvisor"
version = "0.1.0"
description = "Phase 1 RAG foundation for Computer Science advising documents."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "certifi>=2024.0",
  "fastapi>=0.115",
  "groq>=0.9",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "pypdf>=4.0",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "sentence-transformers>=3.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
